[[Feature]]: Implemented TaskMan utils and CRUDOps
