# tomomi_server/routes/app.route.js
@@ -3,8 +3,7 @@
  * @author Brian M'Ikiara <https://github.com/brian-ikiara>
  */
 const express = require('express');
-const AppController = require('../controllers/AppController');
-
+const AppController = require('../controllers/app.controller');
 /**
  * appRoutes Adds AppMan routes to the Server instance
  */
@@ -12,7 +11,7 @@ const router = express.Router();
 
 /**
  * @swagger
- * /app/status:
+ * /api/app/status:
  *   get:
  *     summary: Is Tomomi okay?
  *     description: Confirms whether Tomomi's up and running.
